--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/para-fixar/primeiras-tags.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/para-fixar/primeiras-tags.html
@@ -2,22 +2,37 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Primeiras Tags</title>
+  <meta charset="UTF-8">
+  <title>Primeiras Tags</title>
 </head>
 
 <body>
-    <h1>Exercício Primeira Tag</h1>
-    <h2> Lista de pessoas que já fiz amizade na trybe: </h2>
-    <ol>
-        <li>Dhiego Bhaltazar</li>
-        <li>Aimê Martins</li>
-        <li>Alexandre Urquiza</li>
+  <h1>Exercício Primeira Tag</h1>
 
-    </ol>
-    <img src="https://media-exp1.licdn.com/dms/image/C4D12AQFax2JW3Vd1Sw/article-cover_image-shrink_600_2000/0/1592834933618?e=2147483647&v=beta&t=Wz46Ao88U_QF0k-gtdQLqy2f-8B0X4MOeSdUZ4tcHmA"
-        width="300px">
-    <img src="/home/pc/Imagens/capturas-de-tela/foto-willian.png" width="300px">
+  <h2> Lista de pessoas que já fiz amizade na trybe: </h2>
+
+  <ol>
+    <li><strong>Dhiego Bhaltazar</strong></li>
+    <a href="https://www.betrybe.com/" target="_blank "> Linkedin </a>
+    <p> Me audou muito quando deu problema na minha chave SSH e conversamos diariamente.</p>
+
+    <li><strong>Aimê Martins</strong></li>
+    <a href="https://www.betrybe.com/" target="_blank "> Linkedin </a>
+    <p> Minha cundada, começou o curso antes mim!</p>
+
+    <li><strong>Alexandre Urquiza</strong></li>
+    <a href="https://www.betrybe.com/" target="_blank "> Linkedin </a>
+    <p> Mora relativamente perto de mim e o descobri como aluno da trybe.</p>
+
+  </ol>
+
+  <h3><strong>Link do Google:</strong></h3>
+  <a href="https://www.betrybe.com/" target="_blank "> Linkedin </a> <br>
+
+  <img
+    src="https://media-exp1.licdn.com/dms/image/C4D12AQFax2JW3Vd1Sw/article-cover_image-shrink_600_2000/0/1592834933618?e=2147483647&v=beta&t=Wz46Ao88U_QF0k-gtdQLqy2f-8B0X4MOeSdUZ4tcHmA"
+    width="300px">
+  <img src="/home/pc/Imagens/capturas de tela/foto-willian.png" width="300px">
 
 
 
