finalizando exemplo de fixaçao - links externos e internos

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/para-fixar/links-externos-internos.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/para-fixar/links-externos-internos.html
@@ -29,5 +29,10 @@
         <p> Juliana é uma mulher muito esforçada e está gostando do curso da Trybe.</p>
 
       </ul>
+
+      <h3><strong>Link do Google:</strong></h3>
+  <a href="https://www.google.com/" target="_blank "> Linkedin </a> <br>
+
+  
   </body>
 </html>
