--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/agrupam-e-pseudoclasses/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/agrupam-e-pseudoclasses/index.html
@@ -23,14 +23,21 @@
 
     <p>Top 3 dos melhores sites que existem na web</p>
 
-    <ol>
+    <ol class="estilo-lista">
         <li>www.betrybe.com </li>
         <li>www.palmeiras.com.br </li>
         <li>developer.mozilla.org </li>
-        
+
     </ol>
 
     <p>Principais motivos para eu gostar deles</p>
+
+    <ol class="estilo-lista">
+        <li>A Trybe vai me impulsionar na área de TI </li>
+        <li>Sou Palmenrense roxo. Digo, verde! </li>
+        <li>Vai me ajudar muito na minha carreira Dev </li>
+
+    </ol>
 </body>
 
 </html>
