--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/index.html
@@ -18,7 +18,9 @@
         <li><em>Parte da jornada é o fim.</em> - Tony Stark (Homem de Ferro)</li>
         <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
-    <h3>As maiores linguagens de programação:</h3>
+
+    <h3 class="italic">As maiores linguagens de programação:</h3>
+
     <ul>
         <li>Python</li>
         <li>Java</li>
