--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/index.html
@@ -21,15 +21,15 @@
 
     <h3 class="italic">As maiores linguagens de programação:</h3>
 
-    <ul>
+    <ul id="linguagens">
         <li>Python</li>
         <li>Java</li>
-        <li>JavaScript</li>
+        <li class="pink-bg">JavaScript</li>
         <li>C#</li>
         <li>C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
-    <ul>
+    <ul class="lista-aliados">
         <li>
             <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
         </li>
