--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Hackathon Results</h1>
     </header>
-    <section>
+    <section class="team-podium">
         <ul>
             <li class="first">1º - Equipe 1</li>
             <li class="second">2º - Equipe 2</li>
