finalizando exemplo para fixar

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/index.html
@@ -20,13 +20,16 @@
             <li class="second">2º - Equipe 2</li>
             <li class="third">3º - Equipe 3</li>
         </ul>
+
     </section>
-    <section>
+    
+    <section class="award">
         <h3>Premiação Primeiro Lugar:</h3>
         <ul>
             <li>| R$ 1000,00 por integrante da equipe |</li>
             <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
         </ul>
+
         <h3>Premiação Segundo Lugar:</h3>
         <ul>
             <li>| R$ 600,00 por integrante da equipe |</li>
