criando estrutura genérica do html semântico

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/introducao-a-html-e-css.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/introducao-a-html-e-css.html
@@ -10,7 +10,7 @@
     <!--insira os elementos aqui-->
     <header>
         <section>
-            <h1>Soco a 80 km/h: Conheça o Smatopoda</h1>
+            <h1>Soco a 80 km/h: Conheça o Stomatopoda</h1>
         </section>
 
         <nav>
@@ -22,7 +22,35 @@
         </nav>
 
         <main>
-            
+
+            <article>
+
+                <h2> Os Fatos Interessantes do Stomatopoda</h2>
+                <h3> Um dos animais mais impressionantes que existe<h3>
+
+                        <section>
+                            <h4>Informações gerais</h4>
+                        </section>
+
+                        <section>
+                            <h4>Fatos Interessantes 1</h4>
+                        </section>
+
+                        <div>
+                            <section>
+                                <h4>Fatos Interessantes 2</h4>
+                            </section>
+
+                            <section>
+                                <h4>Fatos Interessantes 3</h4>
+                            </section>
+                        </div>
+
+                        <section>
+                            <h4>Referencias Bibliográficas</h4>
+                        </section>
+
+            </article>
 
 
 
