finalizando 3 secao - a beleza da stomatopoda

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/introducao-a-html-e-css.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/introducao-a-html-e-css.html
@@ -80,10 +80,21 @@
                         cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido
                         se ela pode distinguir a luz infravermelha.
                     </p>
+
                 </section>
 
-                <section>
-                    <h4>Fatos Interessantes 3</h4>
+                <h4>A beleza da Stomatopoda: aparência de impressionar</h4>
+                <section class="fact-three">
+
+                    <div class="image-three-section">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Peacock_shrimp_at_manta_reef_dsc04367.jpg/800px-Peacock_shrimp_at_manta_reef_dsc04367.jpg"
+                    alt="smatopoda details image">
+                    </div>
+                    
+
+                    <p>Encontrada na região indo-pacífica, da costa oeste da África até Guam, a tamarutaca-pavão é uma espécie grande e colorida da ordem de crustáceos Stomatopoda, popularmente conhecidos como tamarutacas. Medindo até 18 cm de comprimento, seu corpo é em grande parte verde com algumas manchas pretas grandes com um contorno branco no cefalotórax. As patas são laranja-avermelhadas e a região em torno dos olhos possui um tom azul-claro. Devido a esta bela aparência, a tamarutaca-pavão se tornou um animal popular para ser criado em aquários.
+                    </p>
+
                 </section>
 
                 <section>
