--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
@@ -1,48 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Exercício</title>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Exercício</title>
+
+  <style>
+    main,
+    section {
+      border-color: black;
+      border-style: solid;
+    }
+
+    .title {
+      text-align: center;
+    }
+
+    .main-content {
+      background-color: yellow;
+    }
+
+    .main-content .center-content {
+      background-color: red;
+      width: 50%;
+      margin: 0 auto;
+    }
+
+    .main-content .center-content p {
+      font-style: italic;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1 class="title">Desafio - JavaEscripito</h1>
+  </header>
+  <main class="main-content">
+    <section class="center-content">
+      <p>Texto padrão do nosso site</p>
+      <p>-----</p>
+      <p>Trybe</p>
+    </section>
+  </main>
+  <script>
+// 1 - Crie e execute uma função que mude o texto na tag <p>-----</p>, para uma descrição de como você se vê daqui a 2 anos;
+// 2 - Crie e execute uma função que mude a cor do quadrado amarelo para rgb(76,164,109);
+// 3 - Crie e execute uma função que mude a cor do quadrado vermelho para branco;
+// 4 - Crie e execute uma função que corrija o texto da tag <h1>;
+// 5 - Crie e execute uma função que modifique o texto da primeira tag <p> para maiúsculo;
+// 6 - Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
     
-    <style>
-      main, section {
-        border-color: black;
-        border-style: solid;
-      }
+    function changeTheText() {
+      let textAboutMe = document.getElementsByTagName('p')[1];
+      textAboutMe.innerText = 'Daqui a 2 anos quero estar trabalhando como desenvolvedor e cursando Ciência da Computação (ead)';
+    }
+    changeTheText();
 
-      .title {
-        text-align: center;
-      }
+    function changeColorMain() {
+      let colorMain = document.getElementsByClassName('main-content')[0];
 
-      .main-content {
-        background-color: yellow;
-      }
+    }
 
-      .main-content .center-content {
-        background-color: red;
-        width: 50%;
-        margin: 0 auto;
-      }
 
-      .main-content .center-content p {
-        font-style: italic;
-      }
-    </style>
-  </head>
-  <body>
-    <header> 
-      <h1 class="title">Desafio - JavaEscripito</h1>
-    </header>    
-    <main class="main-content">
-      <section class="center-content">
-        <p>Texto padrão do nosso site</p>
-        <p>-----</p>
-        <p>Trybe</p>
-      </section>
-    </main>
-    <script>
-      // Seu código aqui
-    </script>
-  </body>
+
+
+
+
+
+  </script>
+</body>
+
 </html>
