resolvido requisito 2 - funcao que muda a  cor do quadrado amarelo

--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
@@ -58,10 +58,11 @@
     }
     changeTheText();
 
-    function changeColorMain() {
-      let colorMain = document.getElementsByClassName('main-content')[0];
-
+    function changeMainGreen() {
+      let mainYellow = document.getElementsByClassName('main-content')[0];
+      mainYellow.style.backgroundColor = 'rgb(76,164,109)';
     }
+    changeMainGreen();
 
 
 
