resolvido requisito 3 - funcao que muda cor da section para branco

--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
@@ -59,10 +59,17 @@
     changeTheText();
 
     function changeMainGreen() {
-      let mainYellow = document.getElementsByClassName('main-content')[0];
-      mainYellow.style.backgroundColor = 'rgb(76,164,109)';
+      let main = document.getElementsByClassName('main-content')[0];
+      main.style.backgroundColor = 'rgb(76,164,109)';
     }
     changeMainGreen();
+
+    function changeSectionWhite() {
+      let section = document.getElementsByClassName('center-content')[0];
+      section.style.backgroundColor = 'white';
+    }
+    changeSectionWhite();
+
 
 
 
