--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
@@ -70,7 +70,11 @@
     }
     changeSectionWhite();
 
-
+    function changeTagH1(text) {
+      let textH1 = document.getElementsByTagName('h1')[0];
+      textH1.innerText = `${text}`;
+    }
+    changeTagH1('Desafio - JavaScript');
 
 
 
