resolvido requisito 5 - function primeira tag p maiúscula

--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-01-js-dom-e-seletores/exercicio-mnipulacao-de-dom/index.html
@@ -74,11 +74,15 @@
       let textH1 = document.getElementsByTagName('h1')[0];
       textH1.innerText = `${text}`;
     }
-    changeTagH1('Desafio - JavaScript');
+    changeTagH1('Exercicio 5.1 - JavaScript');
 
+    function changeParagraphOne() {
+      let textParagraphOne = document.getElementsByTagName('p')[0];
+      textParagraphOne.innerText = textParagraphOne.innerText.toUpperCase();
+    }
+    changeParagraphOne()
 
-
-
+    
 
 
   </script>
