removendo section2 filha da main que contem a foto e centralizando a section3

--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-02-js-trabalhando-com-elementos/exercicios-aprofunde-conhecimento/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-02-js-trabalhando-com-elementos/exercicios-aprofunde-conhecimento/index.html
@@ -75,8 +75,8 @@
     // Após criar as tags anteriores, você mostrou para a sua liderança como estava a estrutura inicial da página. Sua liderança então pediu para que você fizesse algumas alterações:
 
     // Adicione a classe title na tag h1 criada; OK
-    // Adicione a classe description nas 3 tags h3 criadas;
-    // Remova a section criada no passo 5 (aquele que possui a classe left-content). Utilize a função .removeChild();
+    // Adicione a classe description nas 3 tags h3 criadas; OK
+    // Remova a section criada no passo 5 (aquele que possui a classe left-content). Utilize a função .removeChild(); OK
     // Centralize a section criada no passo 6 (aquele que possui a classe right-content).
     // De olho na dica 👀:: Para centralizar a section, basta configurar o margin-right: auto da section;
 
@@ -139,6 +139,9 @@
     h1Trybe.className = "title";
     console.log(body);
 
+    main.removeChild(section2MainSOn);
+
+    section3MainSOn.style.marginRight = 'auto';
 
 
 
