--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-02-js-trabalhando-com-elementos/exercicios-aprofunde-conhecimento/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-02-js-trabalhando-com-elementos/exercicios-aprofunde-conhecimento/index.html
@@ -114,7 +114,7 @@
     img1.className = 'small-image';
     section2MainSOn.appendChild(img1);
     
-    const arrayNumbLi = ['1','2','3','4','5','6','7','8','9','10'];
+    const arrayNumbLi = ['1','2','3','4','5','6','7','8'];
     const createUnorderedList = (array) => {
         const unorderedList = document.createElement('ul');
         section3MainSOn.appendChild(unorderedList);
@@ -143,7 +143,7 @@
 
     section3MainSOn.style.marginRight = 'auto';
 
-
+    main.style.backgroundColor = "green";
 
 
 
