--- a/fundamentos/secao-05-js-dom-eventos-web-storage/dia-02-js-trabalhando-com-elementos/exercicios-aprofunde-conhecimento/index.html
+++ b/fundamentos/secao-05-js-dom-eventos-web-storage/dia-02-js-trabalhando-com-elementos/exercicios-aprofunde-conhecimento/index.html
@@ -77,11 +77,11 @@
     // Adicione a classe title na tag h1 criada; OK
     // Adicione a classe description nas 3 tags h3 criadas; OK
     // Remova a section criada no passo 5 (aquele que possui a classe left-content). Utilize a função .removeChild(); OK
-    // Centralize a section criada no passo 6 (aquele que possui a classe right-content).
+    // Centralize a section criada no passo 6 (aquele que possui a classe right-content). OK
     // De olho na dica 👀:: Para centralizar a section, basta configurar o margin-right: auto da section;
 
-    // Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content) para a cor verde;
-    // Remova os dois últimos elementos (nove e dez) da lista criada no passo 8.
+    // Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content) para a cor verde; OK
+    // Remova os dois últimos elementos (nove e dez) da lista criada no passo 8. OK 
     
     const body = document.getElementById('body');
     const h1Trybe = document.createElement('h1');
