atualizando patas da seçõ 6.1

--- a/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-01-forms/exercicios-criando-formulário/form.html
+++ b/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-01-forms/exercicios-criando-formulário/form.html
@@ -60,7 +60,7 @@
 
 				<div>
 					<label for="concordo-2">
-						<input type="checkbox" id="concordo-2" name="divulgacao"> Concordo que imagens das minhas férias poderão ser
+						<input type="checkbox" id="concordo-2" name="divulgacao" required> Concordo que imagens das minhas férias poderão ser
 						usadas na divulgação de concursos futuros.</label>
 				</div>
 				<br>
@@ -73,7 +73,7 @@
 
 
 	</main>
-	<script src="script.js"></script>
+	<script src="./script.js"></script>
 </body>
 
 </html>
