--- a/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form.html
+++ b/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form.html
@@ -1,64 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Formulario-TrybeTrip</title>
+	<title>Concurso TrybeTrip</title>
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 
 <body>
-	<h1>Concorra à Viagem dos seus sonhos com a TrybeTrip</h1>
+	<header id="header" class="container mt-5 mb-5">
+		<h1>INSCRIÇÕES TRYBETRIP</h1>
+	</header>
+	<main id="main" class="container p-3">
+		<form action="">
+			<fieldset>
 
-	<form>
-		<fieldset>
-			<label for="fullName">Nome Completo:</label>
-			<input type="text" id="fullName" name="fullName" placeholder="Digite seu nome completo" maxlength="40"
-				minlength="10" required>
-			<br />
+				<div class="inputs container mb-3">
+					<label for="name-input" class="form-label">Nome:</label>
+					<input type="text" id="name-input" name="fullname" maxlength="40" minlength="10"
+						placeholder="Digite seu nome completo" required>
+				</div>
 
-			<label for="email">Endereço de e-mail:</label>
-			<input type="email" id="email" name="email" placeholder="Digite seu e-mail" maxlength="50" minlength="10"
-				required>
-			<br />
+				<div class="inputs container mb-3">
+					<label for="email-input" class="form-label">E-mail:</label>
+					<input type="email" id="email-input" name="email" maxlength="50" minlength="10"
+						placeholder="Digite seu e-mail" required>
+				</div>
 
-			<label for="destination1">Cidade</label>
-			<input type="radio" id="destination1" className="radios" name="destinations" value="Cidade" required>
+				<div class="inputs container mb-3">
+					<label for="cidade" class="form-label">
+						<input type="radio" class="form-check-input" id="cidade" name="options" value="ci"> Cidade</label>
+					<label for="campo" class="form-label">
+						<input type="radio" class="form-check-input" id="campo" name="options" value="ca"> Campo</label>
+					<label for="praia" class="form-label">
+						<input type="radio" class="form-check-input" id="praia" name="options" value="pra"> Praia</label>
+					<label for="montanhas" class="form-label">
+						<input type="radio" class="form-check-input" id="montanhas" name="options" value="mo"> Montanhas</label>
+				</div>
 
-			<label for="destination2">Campo</label>
-			<input type="radio" id="destination2" className="radios" name="destinations" value="Campo" required>
+				<div class="inputs container mb-3">
+					<label for="informations" class="form-label">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
+						TrybeTrip?</label><br>
+					<textarea name="other-info" id="informations" cols="50" rows="10" placeholder="Nos conte Aqui!"
+						maxlength="500"></textarea>
+				</div>
 
-			<label for="destination3">Praia</label>
-			<input type="radio" id="destination3" className="radios" name="destinations" value="Praia" required>
+				<div class="inputs container mb-3">
+					<label for="travel-date" class="form-label"> Data para a viagem: </label>
+					<input type="date" name="date" id="travel-date" required>
+				</div>
 
-			<label for="destination4">Montanhas</label>
-			<input type="radio" id="destination4" className="radios" name="destinations" value="Montanhas" required>
-			<br />
+				<div class="inputs container mb-3">
+					<label for="concordo-1" class="form-label">
+						<input type="checkbox" id="concordo-1" name="oportunidades"> Gostaria de receber outras incríveis
+						oportunidades oferecidas pela Trybe?</label>
+				</div>
 
-			<label for="why">Por que você deveria ser a pessoa desenvolvedora escolhida pelo concurso TrybeTrip?</label>
-			<br />
-			<textarea name="why" id="why" cols="60" rows="10" placeholder="Digite sua resposta vencedora aqui"></textarea>
-			<br />
+				<div class="container mb-3">
+					<label for="concordo-2" class="form-label">
+						<input type="checkbox" id="concordo-2" name="divulgacao" required> Concordo que imagens das minhas férias
+						poderão ser
+						usadas na divulgação de concursos futuros.</label>
+				</div>
 
-			<label for="date">Qual a melhor data para realizar sua viagem?</label>
-			<input type="date" id="date">
-			<br />
+				<button type="submit" id="btn-submit">ENVIAR INFORMAÇÕES</button>
+				<button type="reset" id="btn-reset">APAGAR</button>
+			</fieldset>
 
-			<label for="promo">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe.</label>
-			<input type="checkbox" name="promo" id="promo">
-			<br />
+		</form>
 
-			<label for="agreement">Concordo que imagens de minhas férias poderão ser usadas na divulgação de concursos
-				futuros.</label>
-			<input type="checkbox" name="agreement" id="agreement" required>
-		</fieldset>
 
-		<button type="submit" id="submit-btn">Participar do concurso TrybeTrip</button>
-		<button type="button" id="clear-btn">Apagar informações</button>
-	</form>
+	</main>
+	<script src="./script.js"></script>
 </body>
 
 </html>
