estilizando inputs type text, email e textArea

--- a/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form.html
+++ b/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form.html
@@ -22,13 +22,13 @@
 
 				<div class="inputs container mb-3">
 					<label for="name-input" class="form-label">Nome:</label>
-					<input type="text" id="name-input" name="fullname" maxlength="40" minlength="10"
+					<input type="text" id="name-input" class="form-control" name="fullname" maxlength="40" minlength="10"
 						placeholder="Digite seu nome completo" required>
 				</div>
 
 				<div class="inputs container mb-3">
 					<label for="email-input" class="form-label">E-mail:</label>
-					<input type="email" id="email-input" name="email" maxlength="50" minlength="10"
+					<input type="email" id="email-input" class="form-control" name="email" maxlength="50" minlength="10"
 						placeholder="Digite seu e-mail" required>
 				</div>
 
@@ -46,7 +46,7 @@
 				<div class="inputs container mb-3">
 					<label for="informations" class="form-label">Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
 						TrybeTrip?</label><br>
-					<textarea name="other-info" id="informations" cols="50" rows="10" placeholder="Nos conte Aqui!"
+					<textarea name="other-info" id="informations" class="form-control" cols="50" rows="10" placeholder="Nos conte Aqui!"
 						maxlength="500"></textarea>
 				</div>
 
