adicionando background-color e Logotipo da trybe

--- a/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form.html
+++ b/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form.html
@@ -12,11 +12,12 @@
 	<!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 
-<body>
+<body class="bg-light">
 	<header id="header" class="container mt-5 mb-5">
-		<h1>INSCRIÇÕES TRYBETRIP</h1>
+		<img src="https://s3.us-east-1.amazonaws.com/remotar-dev/company-profile-pictures/cl398ub2v001b04t8a7wbb6sn.jpg" alt="logo da trybe">
+		<h1 class="text-success">INSCRIÇÕES TRYBETRIP</h1>
 	</header>
-	<main id="main" class="container p-3">
+	<main id="main" class="container p-3 bg-success bg-gradient text-light">
 		<form action="">
 			<fieldset>
 
@@ -68,8 +69,8 @@
 						usadas na divulgação de concursos futuros.</label>
 				</div>
 
-				<button type="submit" id="btn-submit">ENVIAR INFORMAÇÕES</button>
-				<button type="reset" id="btn-reset">APAGAR</button>
+				<button type="submit" id="btn-submit" class="btn btn-light">ENVIAR INFORMAÇÕES</button>
+				<button type="reset" id="btn-reset" class="btn btn-danger">APAGAR</button>
 			</fieldset>
 
 		</form>
