usando Just-Validate no arquivo form2.html

--- a/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form2.html
+++ b/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-02-bibliotecas-js-e-frameworks/form2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,31 +9,22 @@
 </head>
 
 <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+
 <body>
     <script>
         const validate = new window.JustValidate('#form');
-      </script>
+    </script>
 
     <form action="#" id="form" autocomplete="off">
         <label for="name">Enter your name</label>
-        <input
-          type="text"
-          class="form__input form-control"
-          placeholder="Enter your name"
-          autocomplete="off"
-          name="name"
-          id="name"
-        />
+        <input type="text" class="form__input form-control" placeholder="Enter your name" autocomplete="off" name="name"
+            id="name" />
         <label for="email">Enter your email</label>
-        <input
-          type="email"
-          class="form__input form-control"
-          placeholder="Enter your email"
-          autocomplete="off"
-          name="email"
-          id="email"
-        />
+        <input type="email" class="form__input form-control" placeholder="Enter your email" autocomplete="off"
+            name="email" id="email" />
         <button class="btn btn-primary" id="submit-btn">Submit</button>
-      </form>
+    </form>
+    <script src="./script.js"></script>
 </body>
+
 </html>
